--- a/client/src/theme-colors.scss
+++ b/client/src/theme-colors.scss
@@ -25,7 +25,7 @@ $light-pink : #F9D9DD;
 
 $orange : #EF8E25;
 $dark-orange : #512800;
-$light-orange : #F2DBC4;
+$light-orange : #fdf3e8;
 
 $yellow : #F4C653;
 $dark-yellow : #775105;
